make my profile prettier

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="/profile/images/1517468776927.jpg" class="img-circle" alt="Photo of Myself">
         <h1>Axel</h1>
         <h2>Programmer</h2>
-        <p>blablbabla</p>
+        <p>My name is Axel and I was born at a very young age.</p>
         <a href="#" class="btn-blue">Discover Le Wagon</a>
       </div>
       <div class="card">
